# SistemaLocadora

./: CMakeLists.txt  Caixa.c  Caixa.h  Carrinho.c  Carrinho.h  ContasAPagar.c  ContasAPagar.h  ContasAreceber.h  ControleCategorias.c  ControleCategorias.h  ControleClientes.c  ControleClientes.h  ControleDeDadosLocadora.c  ControleDeDadosLocadora.h  ControleDeNumeros.c  ControleDeNumeros.h  ControleFilmes.c  ControleFilmes.h  Devolucoes.c  Devolucoes.h  EntradaDeFilmes.c  EntradaDeFilmes.h  ExportacaoXML.c  ExportacaoXML.h  FuncUtilitarias.c  FuncUtilitarias.h  Funcionarios.txt  ImportacoesXML.c  ImportacoesXML.h  ManipulacoesDeTexto.c  ManipulacoesDeTexto.h  README.md  categorias.txt  clientes.txt  contasAreceber.c  controleFuncionarios.c  controleFuncionarios.h  cppapplication_1.exe.stackdump  devolucoes.txt  exportacoesXML.c  (+15 more)
